--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en`">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 lang="tl">Not Try, Just Do List</h1>
+    <h1>Not Try, Just Do List</h1>
 
     <form action="/addToDoForm" method="POST">
         <input type="text" placeholder="items" name="itemFormName">
